SLIDER : Correcting an horizontal scroll issue

--- a/src/containers/Slider/style.scss
+++ b/src/containers/Slider/style.scss
@@ -11,6 +11,12 @@
     top: 0;
     position: absolute;
     transition: opacity 1s;
+
+    img {
+      width: 100%;
+      height: 586px;
+      object-fit: cover;
+    }
     &--hide {
       opacity: 0;
     }
